Update VideoService.java